# sharpshooter

./: .gitignore  manage.py  pyproject.toml
.cursor/rules/: 00-core-python.mdc  10-fastapi-architecture.mdc  20-error-handling.mdc  30-performance.mdc  40-conventions.mdc
ps-notebooks/: Untitled.ipynb  pyproject.toml
ps-notebooks/notebooks/development/: 01_data_exploration.ipynb
sharpshooter/: asgi.py  settings.py  urls.py  wsgi.py
sharpshooter/data/: draftkings_rankings_sample.csv  draftkings_rankings_sample.xlsx  espn_rankings_sample.csv
sharpshooter/notebooks/_models/: __init__.py  draftkings_models.py  madden.py
sharpshooter/notebooks/development/: 00_nflverse_data_exploration.ipynb  01_data_exploration.ipynb  01_data_exploration.py  02_etl_process_development.ipynb  04_nflverse_etl.ipynb  05_madden_etl.ipynb  combined_madden_rankings.csv  combined_rankings.csv  draftkings_notebook.ipynb
sharpshooter/utils/: utils.py
