[tool.poetry]
name = "sharpshooter"
version = "0.1.0"
description = ""
authors = ["Timothy Byrne <trbyrne.11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
black = "^24.2.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"
djangorestframework = "^3.14.0"
markdown = "^3.5.2"
django-filter = "^23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
