[project]
name = "sharpshooter"
version = "0.1.0"
description = ""
authors = [{name = "Timothy Byrne", email = "trbyrne.11@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars>=1.3.0",
    "httpx>=0.27.2",
    "jupyter>=1.1.1",
    "pydantic>=2.8.2",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.32",
    "pyarrow>=17.0.0",
    "pandas>=2.2.2",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.5",
    "isort>=5.13.2",
    "ruff>=0.6.3",
    "pytest>=8.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sharpshooter/utils"]
