[tool.poetry]
name = "ps-notebooks"
version = "0.1.0"
description = "Used by developers for interactive development and testing.  Can interact with the ETL logic, S3, and RDS for data analysis and development."
authors = ["Timothy Byrne <trbyrne.11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.2"
numpy = "^2.0.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
polars = "^1.2.1"
prefect = "^2.19.8"
fastapi = "^0.111.1"
httpx = "^0.27.0"
sqlmodel = "^0.0.21"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.11.0"
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
